--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,146 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/*----------------------- Base Header - Footer Styles ----------------------*/
+header, 
+footer {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}   
+
+/*----- BODY -----*/
+
+.content-wrapper {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-divider{
+
+}
+
+header nav {
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+/*----- MAIN -----*/
+
+.hero-area {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+aside {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.form {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.features {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.fontawesome-icon {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.features-item-description {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.reviews {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/*--------------------- ABOUT PAGE ----------------------*/
+.mission {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.mission-content {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.about-contact-section {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/*--------------------- FAQ PAGE --------------------------*/
+.faq-main-section {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.faq-content-wrapper {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/*----- FOOTER -----*/
+.footer-content {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.copyright {
+
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
