--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* solution add */
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}   
+
 /*----------------------- Base Header - Footer Styles ----------------------*/
 header, 
 footer {
@@ -96,16 +102,24 @@ footer {
   flex-flow: row wrap;
 }   
 
-/*----- BODY -----*/
+/*----------------------- Header ----------------------*/
+header {
+  padding: 15px 0;
+}
 
-.content-wrapper {
+header .content-wrapper {
   display:flex;
   justify-content: center;
   align-items: center;
+  flex-flow: row wrap;
+  margin: 0;
 }
 
 .header-divider{
-
+  width: 100%;
+  /*solution add */
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -113,13 +127,16 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  /* remove - not part of solution align-items: center; */
+  /* solution width 100% not 44% */
+  width:100%;
 }
 
 /*----- MAIN -----*/
@@ -127,47 +144,69 @@ header nav ul {
 .hero-area {
   display:flex;
   justify-content: center;
-  align-items: center;
+  /* not part of solution
+  align-items: center; */
+  flex-flow: row wrap;
 }
+
 
 aside {
   display:flex;
   justify-content: center;
   align-items: center;
-  flex-flow: row wrap;
+  flex-flow: row wrap; 
+
+  
 }
 
 .form {
-  display:flex;
+  /*display:flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
 }
 
 .features {
   display:flex;
   justify-content: center;
+  flex-flow: row wrap;
+}
+
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}  
+
+.features .features-items {
+  display: flex;
+  justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
 
-.fontawesome-icon {
-  display:flex;
-  justify-content: center;
-  align-items: center;
+.features p {
+  margin: 0;
 }
 
-.features-item-description {
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
+/*---------Reviews------*/
 
 .reviews {
   display:flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  width: 90%;
+}
+
+reviews h1 {
+  padding: 54px 0;
+}
+
+reviews h3 {
+  width: 50%;
 }
 
 /*--------------------- ABOUT PAGE ----------------------*/
@@ -176,6 +215,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0;
 }
 
 .mission-content {
@@ -190,6 +230,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0;
 }
 
 /*--------------------- FAQ PAGE --------------------------*/
@@ -198,6 +239,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0;
 }
 
 .faq-content-wrapper {
@@ -208,10 +250,21 @@ aside {
 }
 
 /*----- FOOTER -----*/
-.footer-content {
+footer {
+  flex-direction: column;
+}
+
+footer .content-wrapper {
+ /* removing - not part of solution
   display:flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer p {
+  margin: 0;
 }
 
 .social {
@@ -221,8 +274,8 @@ aside {
 
 }
 
-.copyright {
-
+footer .copyright {
+  margin: 20px 0;
 }
 
 
