--- a/css/main.css
+++ b/css/main.css
@@ -96,13 +96,13 @@ textarea {
 /*----------------------- Base Header - Footer Styles ----------------------*/
 header, 
 footer {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }   
 
-/*----------------------- Header ----------------------*/
+/*----------------------- HEADER ----------------------*/
 header {
   padding: 15px 0;
 }
@@ -136,64 +136,118 @@ header nav ul {
   justify-content: space-around;
   /* remove - not part of solution align-items: center; */
   /* solution width 100% not 44% */
-  width:100%;
+  width:45%;
+  padding: 20px 0;
 }
 
-/*----- MAIN -----*/
 
-.hero-area {
+
+
+
+/*--------------------------- FOOTER ------------------------------*/
+footer {
+  flex-direction: column;
+}
+
+footer .content-wrapper {
+ /* removing - not part of solution
   display:flex;
   justify-content: center;
-  /* not part of solution
   align-items: center; */
-  flex-flow: row wrap;
+  width: 55%;
+  margin: 50px 0;
 }
 
+footer .contact, 
+.social {
+  text-align: center;
 
-aside {
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .social-icons {
   display:flex;
   justify-content: center;
   align-items: center;
-  flex-flow: row wrap; 
-
-  
 }
 
-.form {
-  /*display:flex;
+footer .social p {
+  display: flex;
   justify-content: center;
-  align-items: center;*/
+  align-content: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+
+/*------------------- HOMEPAGE MAIN ------------------------*/
+
+.hero-area {
+  /* display:flex;
+  justify-content: center; */
+  /*not part of solution
+  align-items: center; 
+  flex-flow: row wrap;*/
+  width: 90%;
+  margin-left: 20px;
+}
+
+.header-image h1 {
+  padding: 50px 14px 0 0;
+}
+
+.form aside {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;   
+}
+
+.form aside h3 {
+  padding: 30px 54px 15px 0;
+}
+
+.form aside p {
+  padding: 0 20px 40px 0;
 }
 
 .features {
   display:flex;
   justify-content: center;
-  flex-flow: row wrap;
+  align-items: center; /* need to double check finished to see if this property is correct */
+  width: 80%;
 }
 
 .features h2 {
   margin-bottom: 60px;
+  padding-right: 20px;
 }
 
-.features article {
-  width: 63%;
-  margin: 30px 0;
-}  
-
-.features .features-items {
+.features .features-amenities {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
 
+.features article {
+  width: 160px;
+  margin: 30px 0;
+  text-align: center;
+}  
+
 .features p {
   margin: 0;
 }
 
-/*---------Reviews------*/
+/*--------------------HOMEPAGE - PREVIOUS RETREATS AKA REVIEWS ---------------*/
 
-.reviews {
+.previous-retreats {
   display:flex;
   justify-content: center;
   align-items: center;
@@ -201,21 +255,28 @@ aside {
   width: 90%;
 }
 
-reviews h1 {
-  padding: 54px 0;
+.previous-retreats h1 {
+ padding: 20px 0; 
 }
 
-reviews h3 {
-  width: 50%;
+
+.previous-retreats h3 {
+  width: 80%;
 }
 
-/*--------------------- ABOUT PAGE ----------------------*/
+.previous-retreats article p {
+  padding: 50px 25px 30px 0;
+  }
+
+
+
+/*------------------------- ABOUT PAGE --------------------------*/
 .mission {
   display:flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 50px 0;
+  /*margin: 50px 20px;*/
 }
 
 .mission-content {
@@ -230,7 +291,7 @@ reviews h3 {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 50px 0;
+  /*margin: 50px 30px 50px 20px;*/
 }
 
 /*--------------------- FAQ PAGE --------------------------*/
@@ -243,40 +304,17 @@ reviews h3 {
 }
 
 .faq-content-wrapper {
-  display:flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 20px;
 }
 
-/*----- FOOTER -----*/
-footer {
-  flex-direction: column;
+.question-section {
+  /*flex-basis: 41%;*/
 }
 
-footer .content-wrapper {
- /* removing - not part of solution
-  display:flex;
-  justify-content: center;
-  align-items: center; */
-  width: 55%;
-  margin: 50px 0;
-}
-
-footer p {
-  margin: 0;
-}
-
-.social {
-  display:flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-footer .copyright {
-  margin: 20px 0;
-}
 
 
 
@@ -368,16 +406,201 @@ footer .copyright {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /* -----------------TABLETS ----------------------- */
+
+ .content-wrapper {
+    /* width: 83%; INCORRECT */
+    max-width: 640px;
+    margin: 100px 0; /* why is this? */
+  }
+
+  header {
+    justify-content: center;
+  }
+
+  header .content-wrapper {
+    justify-content: center;
+    /* width:  */
+  }
+
+  header nav {
+    /* width:  */
+  }
+
+  header nav ul {
+   /* width: 17%; */
+   justify-content: center;
+  }
+
+  header nav ul li {
+    list-style-type: none;
+    padding: 40px;
+  }
+
+  .header-divider { 
+    display: none; /* why is this? */
+  }
+
+  footer .content-wrapper {
+    width: 63%;
+    margin: 100px 0;
+  }
+
+  .footer-content {
+    display:flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-flow: row nowrap;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+ /* footer .copyright {
+     width:  
+  } */
+
+/*---------------------- HOMEPAGE ---------------------*/
+
+  .hero-area {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+
+  .hero-area h1 {
+    width: 60%;
+  }
+
+  .form .content-wrapper {
+    width: 640px;
+    margin: 0;
+    /* padding: 50px; */
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row nowrap;
+  }
+
+  .form aside {
+    flex-basis: 320px;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .features .content-wrapper {
+  display: flex;
+  flex-flow: column wrap;
+  }
+
+  .features-amentities {
+    width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .features article {
+    width: 160px;
+    /* margin: 20px;
+    padding: 20px; */
+  }
+
+ .previous-retreats .content-wrapper {
+   width: 480px; 
+ }
+
+ .previous-retreats {
+   display: flex;
+ }
+
+ .previous-retreats article {
+   width: 320px;
+ }
+
+ .review p {
+   padding: 0;
+ }
+
+  /*----------------- ABOUT -----------*/
+  
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+ 
+  .mission-content p {
+    width: 300px;
+  }
+
+  .about-contact-section .content-wrapper h2 {
+    width: 640px;
+  }
+
+  .about-contact-section .content-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /*flex-flow: row wrap;*/
+  }
+
+
+
+  /*---------------- FAQ--------------*/
+  .faq-content-wrapper {
+    flex-basis: 83%;
+  }
+
+  .question-section {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1 1 640px;
+    gap: 50px;
+  }
+
+  .question-section article {
+    flex-basis: 41%;
+  }
+
 }
 
-@media print,
+
+@media only screen and (min-width: 1200px) {
+  /* --------------------- DESKTOP ----------------- */
+
+  .hero-area {
+    width: 960px;
+  }
+
+  .features .content-wrapper {
+    width: 880px;
+  }
+
+  .features-amenities {
+    width: 800px;
+  }
+  
+  .features article {
+    margin: 20px;
+    padding: 20px;
+  }
+}
+
+
+
+
+
+
+
+
+/*@media print,
   (-webkit-min-device-pixel-ratio: 1.25),
   (min-resolution: 1.25dppx),
   (min-resolution: 120dpi) {
   /* Style adjustments for high resolution devices */
-}
+
 
 /* ==========================================================================
    Print styles.
