--- a/css/main.css
+++ b/css/main.css
@@ -87,11 +87,67 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html {
+  font-size: 16px;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
+ul, 
+ol {
+  list-style-type: none;
+
+}
+
+a {
+  font-size: 1.125em;
+  color: #e2e3ed;
+  text-decoration: none;
+
+}
+
+h1 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.25em;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+}
+
+h3 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+}
+
+p {
+  font-size: .875em;
+  line-height: 1em;
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+  font-size: .875em;
+
+}
+
 /* solution add */
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
-}   
+} 
+
 
 /*----------------------- Base Header - Footer Styles ----------------------*/
 header, 
