--- a/css/main.css
+++ b/css/main.css
@@ -437,6 +437,22 @@ input[type=button] {
   flex-flow: row wrap;
 }
 
+.map figure {
+  width: 100%;
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+.map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .about-contact-section {
   display:flex;
   justify-content: center;
